...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_recipe_image"
...
                    android:orientation="horizontal"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    >

                    <TextView
                        android:id="@+id/textView_recipe_title"
                        android:layout_marginTop="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="10dp"
                        android:text=""
...
                        android:text="@string/preparationtime"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView_recipe_prep_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@{String.valueOf(recipeDisplayViewModel.recipe.preparationTime)}"
                        android:textAlignment="center"
...
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        tools:ignore="TextViewEdits" />

                    <TextView
                        android:id="@+id/textView_recipe_cook_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@{String.valueOf(recipeDisplayViewModel.recipe.cookingTime)}"
                        android:textAlignment="center"
...
